--- a/pokeapi-front-end/index.html
+++ b/pokeapi-front-end/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>PokeapiFrontEnd</title>
-  <base href="https://rugacode.github.io/pokeapi-front-end/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Title</title>
+  <base href="https://rugacode.github.io/pokeapi-front-end/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.f23d86f2f8ee4f8d23cb.css"></head>
+  <link href="https://fonts.googleapis.com/css?family=Exo+2:400,300,600" rel="stylesheet">
+<link rel="stylesheet" href="styles.9899c9a5d0f63670e06a.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.91424d3877d410a479f5.js"></script><script type="text/javascript" src="scripts.c9e67678396b6bf990bc.js"></script><script type="text/javascript" src="main.726c915d47a948f203a3.js"></script></body>
+<script type="text/javascript" src="runtime.06daa30a2963fa413676.js"></script><script type="text/javascript" src="polyfills.91424d3877d410a479f5.js"></script><script type="text/javascript" src="scripts.c9e67678396b6bf990bc.js"></script><script type="text/javascript" src="main.1ef67ffb7d1545689f63.js"></script></body>
 </html>
